--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 * {
-  margin: 0;
+  margin: 5px;
   padding: 0;
   box-sizing: border-box;
 }
@@ -15,42 +15,43 @@ body {
   color: #080883;
   background-color: #fff;
 }
-/*about me  section*/
-.about {
-  display: inline-block;
-  font-size: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  margin-left: 20px;
-  width: 75%;
+/*about me section*/
+.content {
+  font-size: 24px;
+  font-family: Trebuchet, Lucida, Lucida, Arial, sans-serif;
+  margin-left: 5px;
+  width: 100%;
+  border-style: ridge;
+  border-color: #080883;
+  border-width: 5px;
+  padding: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  list-style: none;
 }
 /*main section*/
-.main {
-  margin-bottom: 20px;
-  margin-left: 0;
-  padding: 50px;
-  height: 300px;
+.main-area {
   font-family: Trebuchet, Lucida, Lucida, Arial, sans-serif;
-  background-color: #d4d9e7;
+  background-color: #b5c0e0;
   color: #080883;
-  text-align: left;
+  display: flex;
+  align-items: center;
   line-height: 1.6;
 }
-.main img {
-  max-height: 200px;
-  display: block;
+}
+.main-area img {
+  height: 200px;
+  width: 200px;
+  display: inline-block;
   margin-left: auto;
   margin-right: auto;
   padding-right: 20px;
 }
-.main h2 {
-  padding: 15px 20px 5px 20px;
-  margin-bottom: 20px;
-  font-size: 36px;
-  text-align: left;
-}
+
 .float-left {
   float: left;
-  margin: 25px 25px 25px 25px;
+  margin-right: 25px;
 }
 
 /* Header/hero Section & Nav. Buttons Start*/
@@ -96,29 +97,10 @@ header nav ul li a:hover {
   color: #ffff;
   padding: 5px 10px;
   font-weight: lighter;
-  font-size: 1.55vw;
-  justify-content: space-around;
-  font-family: Arial, Helvetica, sans-serif;
-}
-/*footer starts here*/
-.footer {
-  padding: 30px;
-  font-size: 18px;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-}
-.footer h2 {
-  color: #080883;
-  text-decoration: underline;
-  margin: 20px;
   font-size: 30px;
-}
+  justify-content: space-around;
+  font-family: Trebuchet, Lucida, Lucida, Arial, sans-serif;
 
-/*randomness*/
-.box {
-  width: 350px;
-  height: 150px;
-  margin: 10px;
-  padding: 25px;
-  border: 5px solid black;
-}
+/*footer goes here*/
+
+
