--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,48 @@ header nav ul li a:hover {
   border-radius: 15px;
   text-shadow: none;
 }
+
+/*cards section*/
+.cards {
+  background-color: #e0e5f5;
+  border-color: #080883;
+  border-style: solid;
+  border-width: 5px;
+  border-radius: 10px;
+  padding: 10px;
+  flex: 0 0 200px;
+  flex-grow: 1;
+}
+
+.cards h2 {
+  text-align: center;
+  background-color: #080883;
+  color:#fff
+}
+.cards img {
+  height: 175px;
+  width: 200px;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: 30px;
+  padding-right: 20px;
+}
+
+.cards p {
+  text-align: center;
+  
+}
+.work-links {
+  flex: 4;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
+
+
+
 .fun-title {
   color: #ffff;
   padding: 5px 10px;
