--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,9 @@ body {
   padding: 5px;
   flex-wrap: wrap;
   justify-content: space-around;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 
@@ -68,9 +71,7 @@ header {
   background-position: center;
   background-attachment: fixed;
   background-position: 80%;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
+ 
 }
 
 header nav {
@@ -108,25 +109,65 @@ header nav ul li a:hover {
   padding: 10px;
   flex: 0 0 200px;
   flex-grow: 1;
+  justify-content: space-evenly;
+
+
 }
 
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
+}
+
+.cards:hover.overlay {
+  opacity: 1;
+
+}
+.text-link {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
 .cards h2 {
   text-align: center;
   background-color: #080883;
   color:#fff
+  
 }
 .cards img {
-  height: 175px;
-  width: 200px;
+  display: block;
+  width: 100%;
+  height: auto;
   display: inline-block;
   margin-left: auto;
   margin-right: 30px;
   padding-right: 20px;
+  image-resolution: initial;
 }
 
 .cards p {
+  padding: 30px;
   text-align: center;
-  
+  color: #080883;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.6;
+  font-family: Trebuchet, Lucida, Lucida, Arial, sans-serif;
+
 }
 .work-links {
   flex: 4;
@@ -134,6 +175,7 @@ header nav ul li a:hover {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  font-family: Trebuchet, Lucida, Lucida, Arial, sans-serif;
 
 }
 
