--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ header img {
 header {
   background-image: url("../images/hero-img2.jpg");
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
   padding: 20px 35px;
   background-size: cover;
@@ -165,7 +165,7 @@ header nav ul li a:hover {
   color: #080883;
   font-weight: bold;
   font-size: 20px;
-  line-height: 1.6;
+  line-height: 1.;
   font-family: Trebuchet, Lucida, Lucida, Arial, sans-serif;
 
 }
