--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 5px;
   padding: 0;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 
 h1 {
@@ -12,47 +12,48 @@ h1 {
   text-shadow: 0 0 10px rgba(0, 0, 0, 1);
 }
 
-}
 body {
   color: #080883;
   background-color: #fff;
 }
 /*about me section*/
 .content {
-  font-size: 24px;
+  text-align: center;
+  font-size: 20px;
   font-family: Trebuchet, Lucida, Lucida, Arial, sans-serif;
   margin-left: 5px;
   background: #e0e5f5;
   color: #080883;
-  width: 99%;
+  width: 55%;
+  height: 50%;
   border-style: ridge;
   border-color: #080883;
   border-width: 5px;
-  padding: 5px;
   flex-wrap: wrap;
   justify-content: space-around;
   position: -webkit-sticky;
   position: sticky;
-  top: 0;
 }
-
 
 /*main section*/
 .main-area {
   font-family: Trebuchet, Lucida, Lucida, Arial, sans-serif;
-  background-color: #e0e5f5;
+  background-color: white;
   color: #080883;
   display: flex;
   align-items: center;
   line-height: 1.6;
 }
 header img {
-  height: 205px;
-  width: 200px;
+  border-style: ridge;
+  border-color: #080883;
+  border-width: 5px;
+  height: 210px;
+  width: 201px;
   display: inline-block;
-  margin-left: auto;
+  /* margin-left: auto; */
   margin-right: 30px;
-  padding-right: 20px;
+  /* padding-right: 20px; */
 }
 
 .float-left {
@@ -65,13 +66,12 @@ header {
   background-image: url("../images/hero-img2.jpg");
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 20px 35px;
+  flex-flow: row wrap;
+  padding: 10px 35px;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
   background-position: 80%;
- 
 }
 
 header nav {
@@ -86,14 +86,14 @@ header nav ul {
 }
 
 header nav ul li a {
-  color: #ffff;
+  color: white;
   padding: 5px 10px;
   font-weight: bold;
   font-size: 1.55vw;
   font-family: Trebuchet, Lucida, Lucida, Arial, sans-serif;
 }
 header nav ul li a:hover {
-  background: #ffff;
+  background: white;
   color: #080883;
   border-radius: 15px;
   text-shadow: none;
@@ -101,17 +101,15 @@ header nav ul li a:hover {
 
 /*cards section*/
 .cards {
-  background-color: #e0e5f5;
+  background-color: white;
   border-color: #080883;
   border-style: solid;
   border-width: 5px;
   border-radius: 10px;
   padding: 10px;
   flex: 0 0 200px;
-  flex-grow: 1;
-  justify-content: space-evenly;
-
-
+  /* flex-grow: 1; */
+  justify-content: space-between;
 }
 
 .overlay {
@@ -123,13 +121,12 @@ header nav ul li a:hover {
   height: 100%;
   width: 100%;
   opacity: 0;
-  transition: .5s ease;
-  background-color: #008CBA;
+  transition: 0.5s ease;
+  background-color: #008cba;
 }
 
 .cards:hover.overlay {
   opacity: 1;
-
 }
 .text-link {
   color: white;
@@ -145,8 +142,7 @@ header nav ul li a:hover {
 .cards h2 {
   text-align: center;
   background-color: #080883;
-  color:#fff
-  
+  color: #fff;
 }
 .cards img {
   display: block;
@@ -160,26 +156,21 @@ header nav ul li a:hover {
 }
 
 .cards p {
-  padding: 30px;
   text-align: center;
   color: #080883;
   font-weight: bold;
   font-size: 20px;
-  line-height: 1.;
+  line-height: 1;
   font-family: Trebuchet, Lucida, Lucida, Arial, sans-serif;
-
 }
 .work-links {
   flex: 4;
   padding: 20px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   font-family: Trebuchet, Lucida, Lucida, Arial, sans-serif;
-
 }
-
-
 
 .fun-title {
   color: #ffff;
@@ -194,7 +185,7 @@ header nav ul li a:hover {
   font-size: 18px;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
-  background:  #e0e5f5;
+  background: white;
   color: #080883;
   width: 99%;
   border-style: ridge;
@@ -208,14 +199,15 @@ header nav ul li a:hover {
   color: #080883;
   margin: 20px;
   font-size: 36px;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  text-shadow: 0 0 10px #3d3dff;
 }
 
 .footer div ul {
+  color: #080883;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   list-style: none;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  text-shadow: 0 0 10px #3d3dff;
 }
